container image: améliorations et fix
* ajout d'une property qui permet la construction d'une image contenant
  /bin/bash et autres commandes pour investiguer (image.shell.enabled).
  Désactivé par défaut.
* ajout de la configuration add-opens pour l'image de container; il
  n'est plus nécessaire d'ajouter les options au démarrage du container.